ajout du fait de pouvoir desactiver l'extention et affichage tu status

--- a/index.html
+++ b/index.html
@@ -1,11 +1,10 @@
 <!doctype html>
-<html lang="en">
+<html>
 	<head>
 		<meta charset="utf-8">
-		<title>Test Auto click</title>
+		<title>Auto Get Twitch Gift</title>
 	</head>
 	<body>
 		<button id="button">Start</button>
-		<script src="content.js"></script>
 	</body>
 </html>
